Clarify command line switches